<resources>
    <string name="app_name">EasyText</string>
    <string name="title">Записи</string>
    <string name="add_note_btn">+ Добавить</string>
    <string name="back_btn">Назад</string>
    <string name="forward_button">Далее</string>
    <string name="noname">Без заголовка</string>
    <string name="notext">Нет текста</string>
    <string name="firstopt">Учить с сокращенными словами</string>
    <string name="secondopt">Учить с пропущенными словами</string>
    <string name="cancel">Отмена</string>
    <string name="correct">ВЕРНО!</string>
    <string name="incorrect">НЕВЕРНО</string>
    <string name="settings">Настройки</string>
    <string name="font_size">размер шрифта:</string>
    <string name="medium">средний</string>
    <string name="big">большой</string>
    <string name="small">маленький</string>
    <string name="quit">Выйти</string>
    <string name="welcome">Добро пожаловать в EasyText!</string>
    <string name="e_mail">e-mail</string>
    <string name="password">password</string>
    <string name="sign_in">Войти</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="enter_word">Введите слово…</string>
    <string name="ok">OK</string>
    <string name="text">Текст</string>
    <string name="comment">Комментарий</string>
    <string name="name">Название</string>
    <string name="add_note">Добавить запись</string>
    <string name="del">Удалить</string>
    <string name="edit">Редактировать</string>
    <string name="left_to">"Осталось отгадать "</string>
    <string name="words_from">" слов из "</string>
    <string name="wrong">"Неверно, правильный ответ: "</string>
    <string name="note_exist">Запись с таким названием уже существует!</string>
    <string name="note_">Запись \'</string>
    <string name="_saved">\' сохрнена!</string>
    <string name="no_internet">Отсутствует подключение к Интернету!</string>
    <string name="title_activity_settings">settings</string>
    <string name="password_symbols">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890!@#$%^*()_+-=[]{}|;:\',./?</string>
    <string name="email_symbols">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890@.-?</string>
    <string name="done">Текст выучен!</string>
    <string name="empty">Пока записей нет!</string>
    <string name="app_icon">app icon</string>
    <string name="exit">Выйти</string>
    <string name="firestore">Firestore</string>
    <string name="error_getting_documents">Error getting documents.</string>
    <string name="error">Error!</string>
    <string name="uid">UID</string>
    <string name="no_text">В заметке должен быть текст!</string>
    <string name="edit2">Изменить запись</string>
    <string name="nocommentary"><![CDATA[<Без комментария>]]></string>
    <string name="notitle"><![CDATA[<Без заголовка>]]></string>
    <string name="passwordlength">Пароль должен быть минимум 6 символов</string>
    <string name="success">"Успешная регистрация аккаунта: "</string>
    <string name="sign_up_error">Ошибка регистрации</string>
    <string name="sign_in_error">Ошибка входа</string>
    <string name="success_sign_in">Успешный вход в аккаунт:</string>
    <string name="no_internet_no_del">Запись не удалена - нет сети!</string>
    <string name="retry">Обновить</string>
    <string name="title2">EasyText</string>
    <string name="shortening">Режим \"Сокращение слов\"</string>
    <string name="wordskip">Режим \"Заполнение пропусков\"</string>
</resources>