<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondOption">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="25"
            android:gravity="center"
            android:scrollHorizontally="false"
            android:text= "@string/notext" />

        <TextView
            android:id="@+id/correct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/inputtext"
                android:layout_width="wrap_content"
                android:layout_height="66dp"
                android:layout_weight="8"
                android:ems="10"
                android:hint="@string/enter_word"
                android:inputType="text" />

            <Button
                android:id="@+id/ok_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/ok" />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>