<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/settings_btn"
            android:layout_width="61dp"
            android:layout_height="34dp"
            android:layout_weight="1"
            android:drawableBottom="@drawable/ic_action_name" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="56dp"
                android:layout_weight="6"
                android:gravity="start"
                android:text="@string/title"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="59dp"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/add_note_btn" />
        </LinearLayout>

        <android.widget.SearchView
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="18dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp">

        </androidx.recyclerview.widget.RecyclerView>

        <TextView
            android:id="@+id/tvEmpty"
            android:layout_width="393dp"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:gravity="center"
            android:text="@string/empty"
            android:textColor="#8E8E8E"
            android:textSize="34sp"
            android:visibility="gone" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>